overflow text fix, on reviews

--- a/frontend/src/components/Forms/GlobalForm.css
+++ b/frontend/src/components/Forms/GlobalForm.css
@@ -19,6 +19,8 @@
     margin-bottom: 10px;
     border-radius: 15px;
     border: 1px solid black;
+    font-size: 12px;
+    line-height: 16px;
 }
 
 .add-review-text::-webkit-scrollbar {
@@ -71,4 +73,8 @@
     font-size: 12px;
     color: #ff385c;
     margin: 3px 0;
+}
+
+.each-review-text {
+    word-wrap: break-word;
 }
